--- a/src/components/DataTable/cells/EditableCheckboxCell/EditableCheckboxCell.module.css
+++ b/src/components/DataTable/cells/EditableCheckboxCell/EditableCheckboxCell.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 6px 8px;
+  padding: 0;
   cursor: pointer;
 }
 
